<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white" >

        <LinearLayout
            android:id="@+id/headerLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="110dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:contentDescription="@string/iconDescription"
                android:src="@mipmap/ic_launcher_round" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/app_name"
                android:textColor="#000"
                android:textSize="20pt" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headerLayout">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:background="@drawable/round_edit_text"
                android:hint="Email"
                android:padding="10dp"
                android:textAllCaps="false"
                android:textSize="10pt" />

            <Button
                android:id="@+id/bt_register"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/round_button"
                android:backgroundTint="#FEBC13"
                android:text="@string/register"
                android:textSize="10pt"
                android:textColor="@color/white"
                android:textAllCaps="false" />

            <TextView
                android:layout_width="218dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:text="@string/terms_condition"
                android:textColor="#000"
                android:textAlignment="center" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
