<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/white"
        android:padding="30dp">

        <LinearLayout
            android:id="@+id/headerLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="110dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:contentDescription="@string/iconDescription"
                android:src="@mipmap/ic_launcher_round" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/app_name"
                android:textColor="#000"
                android:textSize="20pt" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/formLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headerLayout">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:background="@drawable/round_edit_text"
                android:hint="Email"
                android:inputType="text"
                android:padding="10dp"
                android:textColorHint="#9C8484"
                android:textSize="10pt" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_edit_text"
                android:hint="Password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColorHint="#9C8484"
                android:textSize="10pt" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/formLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgotPassword"
                android:textColor="#000"
                android:textSize="9pt" />

            <Button
                android:id="@+id/bt_login"
                android:layout_width="97dp"
                android:layout_height="38dp"
                android:layout_marginLeft="85dp"
                android:background="@drawable/round_button"
                android:backgroundTint="#FEBC13"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textAllCaps="false"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/dontHaveAccount"
                android:textSize="9pt"
                android:textColor="#000"/>

            <Button
                android:id="@+id/bt_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/register"
                android:textSize="9pt"
                android:textColor="#0085FF"
                android:textAllCaps="false"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>